k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app
  labels:
    app.kubernetes.io/name: p312-chat
